@@ -922,5 +922,9 @@ policies_free_all(void)
   authdir_reject_policy = NULL;
   addr_policy_list_free(authdir_invalid_policy);
   authdir_invalid_policy = NULL;
+
+  if (!HT_EMPTY(&policy_root))
+    log_warn(LD_MM, "Still had some address policies cached at shutdown.");
+  HT_CLEAR(policy_map, &policy_root);
 }
 
